; ModuleID = '/home/carl/AnghaBench/linux/drivers/mux/extr_mmio.c_mux_mmio_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mux/extr_mmio.c_mux_mmio_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mux_control = type { i32 }
%struct.regmap_field = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mux_control*, i32)* @mux_mmio_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mux_mmio_set(%struct.mux_control* %0, i32 %1) #0 {
  %3 = alloca %struct.mux_control*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.regmap_field**, align 8
  store %struct.mux_control* %0, %struct.mux_control** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.mux_control*, %struct.mux_control** %3, align 8
  %7 = getelementptr inbounds %struct.mux_control, %struct.mux_control* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call %struct.regmap_field** @mux_chip_priv(i32 %8)
  store %struct.regmap_field** %9, %struct.regmap_field*** %5, align 8
  %10 = load %struct.regmap_field**, %struct.regmap_field*** %5, align 8
  %11 = load %struct.mux_control*, %struct.mux_control** %3, align 8
  %12 = call i64 @mux_control_get_index(%struct.mux_control* %11)
  %13 = getelementptr inbounds %struct.regmap_field*, %struct.regmap_field** %10, i64 %12
  %14 = load %struct.regmap_field*, %struct.regmap_field** %13, align 8
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @regmap_field_write(%struct.regmap_field* %14, i32 %15)
  ret i32 %16
}

declare dso_local %struct.regmap_field** @mux_chip_priv(i32) #1

declare dso_local i32 @regmap_field_write(%struct.regmap_field*, i32) #1

declare dso_local i64 @mux_control_get_index(%struct.mux_control*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
